2006-06-28  Atsushi Enomoto  <atsushi@ximian.com>

	* PropertyGrid.cs,
	  PropertyGridTextBox.cs : explicitly set BackColor to differentiate
	  item lines from other area (It also makes BackColor consistent and
	  compatible with .NET). Fixed bug #78564.

2006-06-28  Jonathan Chambers  <jonathan.chambers@ansys.com>

	* PropertyGrid.cs: refresh toolbar when PropertySort is set.
	Patch from Eno for #78555.

2006-06-27  Chris Toshok  <toshok@ximian.com>

	* ThemeWin32Classic.cs: s/grid.grid_drawing/grid

	* DataGridColumnStyle.cs: same.

	* DataGrid.cs: Roll DataGridDrawingLogic.cs into this file.
	
	* DataGridDrawingLogic.cs: nuke.

2006-06-27  Chris Toshok  <toshok@ximian.com>

	* DataGridTableStyle.cs: clean up the constructors, and build the
	list of child relations for this table.  I have no idea if this is
	where we should be doing it (it probably isn't), but since we're
	already iterating over the properties..

	* DataGrid.cs: add row resizing.  for now we add a DataGridRow
	struct and array for keeping track of row information, similar to
	what's shown in a hack on
	http://www.syncfusion.com/FAQ/WindowsForms/FAQ_c44c.aspx.

	* Theme.cs: be consistent about the naming of DataGrid methods,
	prefering ColumnWidths and RowHeights over columnsWidths and
	RowsHeights.

	* ThemeWin32Classic.cs: same, and also add support for variable
	sized rows (and the +/- expansion icons for related rows).

2006-06-27  Peter Dennis Bartok  <pbartok@novell.com>

	* TextBoxBase.cs: Applied Eno's patch from #78660

2006-06-27  Peter Dennis Bartok  <pbartok@novell.com> 

	* Form.cs (ScaleCore): We don't want to scale our form if it's
	  state is minimized or maximized, but we still need to scale our
	  child windows. Also, added try/finally block to ensure layout
	  gets reset (Fixes #78697)

2006-06-27  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: Added 2.0 Scale(SizeF) method (Fixes 78700)

2006-06-27  Peter Dennis Bartok  <pbartok@novell.com> 
